- Fixed where when player was kicked out of the server while being in mine, he won't get teleported when joined. - Fixed where spawn location wasn't centered - Fixed where it was possible to reset mine, while it was resetting already causing bugs - Remade block handling to support Bombs - Remade how backpacks are handled. Now plugins can call inventory#addItem and it will be added to the backpack if auto pickup is enabled. - Added Bombs. Fully configurable with amazing performance! - Added placeholders for rank not found & prestige not found, instead of N/A - Added many methods to the api to handle block breaking (Getting ready for enchants :P) - Added XP drops for blocks - Added XP boosters - Improved block breaking performance